--- a/test_proviPartition.erb
+++ b/test_proviPartition.erb
@@ -1,6 +1,6 @@
 <%#
 kind: provision
-name: Jyejares provisionTemplate fake
+name: jacks provisionTemplate fake
 model: ProvisioningTemplate
 %>
 test provisioning
