Update and rename test_jobtemplate.erb to firstpost_jobtemplate.erb

--- a/firstpost_jobtemplate.erb
+++ b/firstpost_jobtemplate.erb
@@ -1,5 +1,5 @@
 <%#
-name: new test job template
+name: firstpost test job template
 snippet: false
 model: JobTemplate
 job_category: Miscellaneous
