--- a/firstpost_provitemplate.erb
+++ b/firstpost_provitemplate.erb
@@ -1,6 +1,6 @@
 <%#
 kind: provision
-name: new test provi template
+name: firstpost test provi template
 model: ProvisioningTemplate
 %>
 test provi template
